# waifu-rs

./: Cargo.toml  README.md
contrib/: data.sql  verify-all-players-accounted-for
src/: app.rs  config.rs  elo.rs  game.rs  main.rs  player.rs  schema.sql  state.rs  stream.rs
