[package]
name = "waifu-rs"
version = "0.1.0"
authors = ["Bhee <me@bheesham.com>"]
edition = "2018"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "cookies"] }
serde = { version = "1.0", features = ["derive"] }
futures = "0.3"
rusqlite = "^0.24"
